# paradise

./: .gitignore  Cargo.toml  TODO  config-v1.yaml  config-v2.yaml  config.yaml
cli/: Cargo.toml  Makefile.toml  build.rs  build.rs.bak
cli/examples/: foo.rs
cli/src/: main.rs  stream.rs
cli/src/api/: mod.rs
cli/src/cmd/: apply.rs  daemon.rs  echo.rs  info.rs  mod.rs  patch.rs  reconcile.rs
cli/src/cmd/device/: create.rs  delete.rs  list.rs  mod.rs
cli/src/cmd/device/platform/: macos.rs
controller/: Cargo.toml
core/: Cargo.toml
core/src/: device.rs  editor.rs  lib.rs  runtime.rs
core/src/stream/: mod.rs
core/src/stream/buffer/: locking.rs  mod.rs
core/src/stream/rx/: locking.rs  mod.rs  udp.rs
core/src/stream/tx/: locking.rs  mod.rs  tcp.rs  udp.rs
crd/: app.paradise.dev_unitclaim_crd.yaml
daemon/: Cargo.toml
daemon/src/: main.rs  util.rs
daemon/src/cmd/: daemon.rs  echo.rs  info.rs  mod.rs  patch.rs
definitions/: definitions.go
deploy/crd/: app.paradise.dev_signalchain_crd.yaml  app.paradise.dev_unit_crd.yaml  example-unit.yaml
device/: Cargo.toml  build.rs  cbindgen.toml
device/include/: paradise.h
device/platform/: build.sh
device/platform/alsa/: Dockerfile
device/platform/mac/proxyAudioDevice/: ProxyAudioDevice.cpp
device/platform/macOS/: .gitignore  build.sh
device/platform/macOS/proxyAudioDevice/: ProxyAudioDevice.cpp  ProxyAudioDevice.h
device/platform/macOS/proxyAudioDevice.xcodeproj/: project.pbxproj
device/platform/macOS/proxyAudioDevice.xcodeproj/xcshareddata/xcschemes/: ProxyAudioDevice.xcscheme
device/platform/macOS/shared/: AudioDevice.cpp
device/platform/macos/proxyAudioDevice.xcodeproj/: project.pbxproj
device/src/: lib.rs
operator/: Cargo.toml
operator/src/: main.rs
operator/src/node/: interface.rs  mod.rs  patchbay.rs
paradise/: Cargo.toml
paradise/scripts/: build.sh
paradise/src/: lib.rs  runtime.rs
paradise/src/stream/: mod.rs
paradise/src/stream/rx/: locking.rs  tcp.rs  udp.rs
paradise/src/stream/tx/: tcp.rs  udp.rs
scout/: Cargo.toml  Dockerfile
scout/lua/: release.lua  reserve.lua
scout/src/: main.rs  rk.rs
scout/src/node/: mod.rs  pool.rs
scout/src/pool/: mock.rs  mod.rs  redis.rs
scout/src/test/: lua.rs  mod.rs
scout/src/test/lua/: mod.rs  release.rs  reserve.rs
scout/src/test/pathfinding/: mod.rs
scripts/: build-vst.sh  build.sh
tool/: Cargo.toml
tool/src/: main.rs
types/: Cargo.toml  build.rs  build.sh
types/definitions/: build.sh  definitions.go
types/pkg/stream/: client.gen.go  server.gen.go
types/src/: client.rs  lib.rs  server.rs  types.rs
vst/: Cargo.toml  build.sh
vst/foobar.vst/Contents/: Info.plist
vst/foobar.vst/Contents/MacOS/: foobar
vst/src/: editor.rs  lib.bak  lib.rs  runtime.rs  stream.rs
vst/src/stream/: mod.rs  rx.bak  tx.bak
vst/src/stream/rx/: locking.rs  mod.rs  tcp.rs  udp.rs
vst/src/stream/tx/: locking.rs  mod.rs  tcp.rs  udp.rs
vst2/: Cargo.toml
vst2/scripts/: build.sh  package_macos.sh
vst2/src/: lib.rs
vst2/src/stream/rx/: locking.rs  mod.rs  udp.rs
vst2/src/stream/tx/: tcp.rs
vst3/: Cargo.toml
vst3/scripts/: build.sh  osx-bundler.sh
vst3/src/: lib.rs
