[package]
name = "paradise_cli"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
repository = "git@github.com:thavlik/paradise.git"
workspace = ".."
edition = "2018"

[dependencies]
tempfile = "3"
cpal = { git = "https://github.com/rustaudio/cpal" }
anyhow = "1.0.12"
log = "0.4.0"
env_logger = "0.7.1"
signal-hook = "0.1.15"
clap = { git = "https://github.com/clap-rs/clap/" }
tokio = { version = "0.2.6", features = ["rt-core", "rt-threaded", "io-driver", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
difference = "2.0"
futures = "0.3.1"
term = "0.5"
tracing = "0.1.10"
quinn = { git = "https://github.com/djc/quinn", features = ["tls-rustls"] }
crc = "1.8.1"
bencher = "0.1.5"
directories = "2.0.0"
rand = "0.7"
rcgen = "0.8"
structopt = "0.3.0"
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
unwrap = "1.2.1"
url = "2"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"
crossbeam = "0.7.3"
paradise_core = { path = "../core" }
bincode = { git = "https://github.com/servo/bincode.git" }
scopeguard = "1.1.0"
ringbuf = "0.1.6"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
xml-rs = "0.8.3"

[dev-dependencies]
portpicker = "0.1.0"
