[package]
name = "paradise-daemon"
version = "0.1.0"
authors = ["Tom Havlik <keres993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { git = "https://github.com/rustaudio/cpal" }
anyhow = "1.0.12"
clap = { git = "https://github.com/clap-rs/clap/" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["rt-core", "rt-threaded"] }
paradise = { path = "../paradise" }