[package]
name = "paradise_device"
version = "0.1.0"
authors = ["Tom Havlik"]
workspace = ".."
edition = "2018"

[dependencies]
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0.12"
tokio = { version = "0.2.6", features = ["rt-core", "rt-threaded", "io-driver", "time", "macros"] }
cpal = { git = "https://github.com/rustaudio/cpal" }
quinn = { git = "https://github.com/djc/quinn", features = ["tls-rustls"] }
paradise_core = { path = "../core" }
rustls = { version = "0.17", features = ["quic", "dangerous_configuration"] }
webpki = { version = "0.21" }
lazy_static = "1.4.0"
crossbeam = "0.7.3"

[dependencies.log]
features = ["std"]
version = "^0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
syslog = "5.0.0"

[build-dependencies]
cbindgen = "0.14.2"

[lib]
name = "paradise_device"
crate-type = ["staticlib"]

