[package]
name = "scout"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "2.0.4"
uuid = { version = "0.8.1", features = ["v4"] }
r2d2 = "0.8"
redis = "0.15"
r2d2_redis = { git = "https://github.com/sorccu/r2d2-redis"}
anyhow = "1.0.28"
