[package]
name = "scout"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
repository = "git@github.com:thavlik/paradise.git"
workspace = ".."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "2.0.4"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
r2d2 = "0.8"
redis = "0.15"
r2d2_redis = { git = "https://github.com/sorccu/r2d2-redis"}
anyhow = "1.0.28"
serde = "1.0.63"
bincode = "1.2.1"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
