[package]
name = "paradise-types"
version = "0.1.0"
authors = ["Tom Havlik"]
edition = "2018"

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.39"
serde_yaml = "0.8.5"
tokio = { version = "0.2.17", features = ["full"] }
tokio-core = { version = "0.1.17" }
reqwest = { version = "0.10.4", features = ["json"] }
log = "0.4.8"
env_logger = "0.7.1"
async-trait = "0.1.26"
actix-web = "2"
actix-rt = "1"
colored = "1.9.3"
clap = { git = "https://github.com/clap-rs/clap/" }

[dependencies.futures]
version = "0.3.1"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
scopeguard = "1.1.0"


