[package]
name = "vst"
version = "0.1.0"
authors = ["Tom Havlik <keres993@gmail.com>"]
edition = "2018"

[dependencies]
#vst = { path = "../../vst-rs" }
vst = { git = "https://github.com/rustaudio/vst-rs" }
glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }
env_logger = "0.7.1"
flutter-engine = { git = "https://github.com/flutter-rs/flutter-rs" }
flutter-winit = { git = "https://github.com/flutter-rs/flutter-rs" }
log = "0.4.8"

[target.'cfg(target_os = "android")'.dependencies]
android_glue = { git = "https://github.com/rust-windowing/android-rs-glue" }
android_logger = "0.8.6"
android-ndk = { git = "https://github.com/rust-windowing/android-ndk-rs" }
jni-glue = "0.0.10"

[target.'cfg(target_os = "android")'.dependencies.jni-android-sys]
version = "0.0.10"
features = ["api-level-18", "android-content-Context", "android-content-pm-ApplicationInfo"]

[lib]
name = "basicvst"
crate-type = ["cdylib"]