[package]
name = "paradise-vst"
version = "0.1.0"
authors = ["Tom Havlik <keres993@gmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
env_logger = "0.7.1"
flutter-engine = { path = "../../flutter-rs/flutter-engine" }
flutter-winit = { path = "../../flutter-rs/flutter-winit" }
log = "0.4.8"
glutin = { git = "https://github.com/rust-windowing/glutin" }

[lib]
name = "basicvst"
crate-type = ["cdylib"]
