[package]
name = "paradise_vst2"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }
env_logger = "0.7.1"
#flutter-engine = { path = "../../flutter-rs/flutter-engine" }
#flutter-winit = { path = "../../flutter-rs/flutter-winit" }
log = "0.4.8"
log4rs = "0.11.0"
crossbeam = "0.7.3"
#glutin = { git = "https://github.com/rust-windowing/glutin" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["rt-core", "rt-threaded"] }
lazy_static = "1.4.0"
paradise_core = { path = "../core" }

[lib]
name = "paradise_vst2"
crate-type = ["cdylib"]
